...
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
              android:id="@+id/story_name_text_view"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:fontFamily="sans-serif-medium"
              android:onClick="@{(v) -> viewModel.clickOnStorySummaryTitle()}"
              android:text="@{viewModel.storySummary.storyName}"
              android:textColor="@color/oppiaPrimaryText"
...
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:minWidth="48dp"
            android:minHeight="48dp">

            <ImageView
              android:id="@+id/chapter_list_drop_down_icon"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal|bottom"
              android:contentDescription="@{@string/show_hide_chapter_list(viewModel.storySummary.storyName)}"
              android:src="@{isListExpanded? @drawable/ic_arrow_drop_up_black_24dp : @drawable/ic_arrow_drop_down_black_24dp}" />
          </FrameLayout>
...
          android:layout_width="match_parent"
          android:layout_height="2dp"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/dashed_divider" />

        <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/chapter_recycler_view"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="56dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
...
